# powersol1.4

./: .env.example  AFFILIATE_APPLICATION_FRONTEND_EXAMPLE.md  BLOCKCHAIN_SETUP.md  COMECE_AQUI.md  COMO_TESTAR_AFILIADOS.md  ONDE_ABRIR_VSCODE.md  PROMPT_PARA_CODEX.md  README.md  TICKETS_DATABASE_FIX.md  deploy-all.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1774913522354-15df745966a87.mjs  wallets-config.json
docs/: ANCHOR_INTEGRATION.md  BACKEND_COMPLETE_GUIDE.md  BACKEND_QUICK_START.md  CHATGPT_CODE_EXAMPLES.md  CHATGPT_PROMPT.md  CHECKLIST_TWITTER.md  COMO_ACESSAR_WALLETS.md  COMO_FAZER_DEPLOY.md  COMO_VER_BANCO_DADOS.md  DEPLOY_COMPLETE_SYSTEM.md  FRONTEND_BACKEND_INTEGRATION.md  INTEGRATION_WITH_REPO.md  INTEGRATION_WITH_REPO_NEW.md  PRIZE_CLAIM_SYSTEM.md  QUICK_TEST_PRIZES.md  README.md  README_BACKEND_SETUP.md  SOLANA_WALLETS.md  SOLANA_WALLETS_EXPLICACAO.md  STATUS.md  TUTORIAL_TWITTER_API.md  deploy-all.sh  fund-wallets-devnet.sh  integrate-with-repo.sh  server.js  test-supabase.html  test-twitter-api.sh  test-winners.html  test-winners.js
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
powersol-backend/: .env.example  ADMIN_AUDIT_SYSTEM.md  (+17 more)
powersol-programs/programs/powersol-claim/: Cargo.toml
powersol-programs/programs/powersol-claim/src/: errors.rs  lib.rs
powersol-programs/programs/powersol-claim/src/instructions/: claim.rs
powersol-programs/programs/powersol-claim/src/state/: claim.rs
(+356 files in other folders)
