[package]
name = "powersol-claim"
version = "0.1.0"
description = "PowerSOL Prize Claim Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "powersol_claim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
